# LessonsExamples

03_OpenCV_and_blobs/Blobs_examples/OpenCVThresholdAndExtractBlobs/: CMakeLists.txt  OpenCVThresholdAndExtractBlobs.cpp
03_OpenCV_and_blobs/Blobs_examples/OpenCVThresholdAndExtractBlobs/Debug/: runProject.bat
03_OpenCV_and_blobs/Blobs_examples/OpenCVThresholdAndExtractBlobs_wClose/: BlobBox.h  BlobExtraction.cpp  BlobResult.h  blob.cpp
03_OpenCV_and_blobs/Blobs_examples/OpenCVThresholdAndExtractBlobs_wClose/Debug/: runProject.bat
03_OpenCV_and_blobs/Blobs_examples/OpenCVThresholdAndExtractBlobs_wClose/Release/: runProject.bat
03_OpenCV_and_blobs/OpenCV_examples/: Thumbs.db
03_OpenCV_and_blobs/OpenCV_examples/OSSIMEdgeDetect/: OSSIMEdgeDetect.cpp  a.out
03_OpenCV_and_blobs/OpenCV_examples/OpenCVReadImage/: CMakeLists.txt
03_OpenCV_and_blobs/OpenCV_examples/OpenCVThreshold/: CMakeLists.txt
03_OpenCV_and_blobs/OpenCV_examples/OpenCVWienerFilter/: CMakeLists.txt
03_OpenCV_and_blobs/OpenCV_examples/OpenCVWriteOutput/: CMakeLists.txt
03_OpenCV_and_blobs/OpenCV_examples/opencv_samples/: reccommendedSamples.txt
04_Building_OSSIM/OSSIM_To_OpenCV/OSSIMtoOpenCVImage/: OSSIMtoOpenCVImage.cpp
04_Building_OSSIM/ossim-image-info/: build_cmake_project_vs10.bat  ossim-info.cpp
04_Building_OSSIM/ossimCmake/: build_cmake_project_vs10.bat
05_ossimTileToIplFilter/: ProcessImage.cpp  ossimTileToIplFilter.cpp  ossimTileToIplFilter.h
05_ossimTileToIplFilter/modifiedCode/: ProcessImage_2.docx  ossimTileToIplFilter_1c.docx  ossimTileToIplFilter_2.cpp  ossimTileToIplFilter_2.docx
09_KMLshp/kmlWriter/: CMakeLists.txt  kmlWriterTest.cpp
09_KMLshp/shapefilesWithHoles/results/: blobsWithHoles.dbf  blobsWithHoles.shp
12_AIS/AIS_IMINT_FUSION/: 20110326092524_ais.csv  20110326092524_image.csv  CMakeLists.txt  fusion.cpp
12_AIS/exif/: exifTest.cpp
14_Cmake/cmake_is_easy/project/: CMakeLists.txt
trunk/examples/03_OpenCV_and_blobs/Blobs_examples/OpenCVThresholdAndExtractBlobs/: BlobExtraction.h  BlobResult.cpp  blob.h  buildMe.sh  build_cmake_project_vs10.bat
trunk/examples/03_OpenCV_and_blobs/Blobs_examples/OpenCVThresholdAndExtractBlobs/Release/: runProject.bat
trunk/examples/03_OpenCV_and_blobs/Blobs_examples/OpenCVThresholdAndExtractBlobs_wClose/: BlobLibraryConfiguration.h  OpenCVThresholdAndExtractBlobs.cpp
trunk/examples/03_OpenCV_and_blobs/OpenCV_examples/OpenCVEdgeDetect/: CMakeLists.txt  OpenCVEdgeDetect.cpp
trunk/examples/03_OpenCV_and_blobs/OpenCV_examples/OpenCVReadImage/: OpenCVReadImage.cpp
trunk/examples/03_OpenCV_and_blobs/OpenCV_examples/OpenCVThreshold/: OpenCVThreshold.cpp
trunk/examples/03_OpenCV_and_blobs/OpenCV_examples/OpenCVWienerFilter/: test.cpp  wienerFilter.cpp  wienerFilter.h
trunk/examples/03_OpenCV_and_blobs/OpenCV_examples/OpenCVWriteOutput/: OpenCVWriteOutput.cpp  cmake_arguments.bat
trunk/examples/04_Building_OSSIM/OSSIM_To_OpenCV/OSSIMtoOpenCVImage/: runMe.sh
trunk/examples/04_Building_OSSIM/ossim-image-info/: CMakeCache.txt  CMakeLists.txt  cmake_arguments.bat
trunk/examples/04_Building_OSSIM/ossimCmake/: CMakeLists.txt  filterTest.cpp
trunk/examples/04_Building_OSSIM/ossim_image-chain_test/: buildMe.sh
trunk/examples/05_ossimTileToIplFilter/: CMakeLists.txt
trunk/examples/05_ossimTileToIplFilter/Release/: runProject.bat
trunk/examples/05_ossimTileToIplFilter/modifiedCode/: ProcessImage_2.cpp  codeMods.txt  ossimTileToIplFilter_1.cpp  ossimTileToIplFilter_1.docx
trunk/examples/09_KMLshp/kmlWriter/: build_cmake_project_vs10.bat  cmake_arguments.bat  kmlWriter.cpp  kmlWriter.h
trunk/examples/09_KMLshp/shapefilesWithHoles/: main.cpp
trunk/examples/09_KMLshp/shapefilesWithHoles/results/: blobsWithHoles.shx
trunk/examples/12_AIS/AIS_IMINT_FUSION/: README.txt  fusion.cpp
trunk/examples/12_AIS/exif/: buildMe.sh  exif_README.txt
trunk/examples/12_AIS/matching/: fusion.cpp
trunk/examples/14_Cmake/cmake_is_easy/project/: MuestraImagen.cpp
