cmake_minimum_required(VERSION 2.8)
project( sampleKMLwriterApp )
#find_package( OpenCV REQUIRED )
#find_package( OSSIM REQUIRED )
FILE(GLOB SOURCE_FILES *.cpp)
set(LIBRARIES ${OSSIM_LIBRARIES} ${OPENCV_LIBRARIES} )
set(INCLUDES ${OSSIM_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} )
add_executable( sampleKMLwriterApp ${SOURCE_FILES} )
include_directories( sampleKMLwriterApp ${INCLUDES})
target_link_libraries( sampleKMLwriterApp ${LIBRARIES} )

message("====Project: ossimTileToIplFilterApp====")
message("====USING THE FOLLOWING LOCATIONS====") 
message("SOURCE FILES:			${SOURCE_FILES}")
message("OPENCV_INCLUDE_DIR:		${OPENCV_INCLUDE_DIR}")
message("OPENCV_LIBRARIES:		${OPENCV_LIBRARIES}")
message("OSSIM_INCLUDE_DIR:		${OSSIM_INCLUDE_DIR}")
message("OSSIM_LIBRARIES:		${OSSIM_LIBRARIES}")