cmake_minimum_required(VERSION 2.8)
project( ossimTileToIplFilterApp )
#find_package( OpenCV REQUIRED )
#find_package( OSSIM REQUIRED )
FILE(GLOB SOURCE_FILES *.cpp)
set(LIBRARIES ${OSSIM_LIBRARIES} ${OPENCV_LIBRARIES} )
set(INCLUDES ${OSSIM_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} )
add_executable( ossimTileToIplFilterApp ${SOURCE_FILES} )
include_directories( ossimTileToIplFilterApp ${INCLUDES})
target_link_libraries( ossimTileToIplFilterApp ${LIBRARIES} )

message("====Project: ossimTileToIplFilterApp====")
message("====USING THE FOLLOWING LOCATIONS====") 
message("SOURCE FILES:			${SOURCE_FILES}")
message("OPENCV_INCLUDE_DIR:		${OPENCV_INCLUDE_DIR}")
message("OPENCV_LIBRARIES:		${OPENCV_LIBRARIES}")
message("OSSIM_INCLUDE_DIR:		${OSSIM_INCLUDE_DIR}")
message("OSSIM_LIBRARIES:		${OSSIM_LIBRARIES}")